[package]
name = "cuo-diff-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-reader = "0.4.5"
bincode = "1.3.3"
flate2 = "1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
